Imported Upstream version 2.0.4

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,11 @@
     Auke Kok <sofar@foo-projects.org>
 
 
+v2.0.4 - 2 Dec 2008
+  - enable policy-only domains (no rules, just policy declarations)
+  - don't list custom chains in --flush --fast mode
+
+
 v2.0.3 - 30 Sep 2008
   - create chains and subchains even if they are empty
   - fix includes within a rule ("Missing semicolon...")
