--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,17 @@
     Auke Kok <sofar@foo-projects.org>
 
 
+v2.0.6 - 18 Jul 2009
+  - support negation in mark/connmark
+  - support negation in set
+  - added automatic variable $FILENAME
+  - allow @subchain as the first keyword in a closure
+  - don't allow semicolon after empty rule
+  - enable @include to run a program
+  - removed superfluous tokens from error message
+  - create a new stack frame for @subchain (fixes $CHAIN)
+
+
 v2.0.5 - 28 Feb 2009
   - detect double negation
   - improved detection of negated arrays
