--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,16 @@
     Auke Kok <sofar@foo-projects.org>
 
 
+v2.0.7 - 2 Jan 2010
+  - fix post and flush hooks with --lines
+  - always prefix the negation operator
+  - updated netfilter modules:
+    * addrtype: support negation and --limit-iface-{in,out}
+    * conntrack: support negation and --ctdir
+    * owner: support negation and --socket-exists
+    * policy: support negation
+
+
 v2.0.6 - 18 Jul 2009
   - support negation in mark/connmark
   - support negation in set
