--- a/doc/ferm.pod
+++ b/doc/ferm.pod
@@ -5,7 +5,7 @@
 #
 # ferm, a firewall setup program that makes firewall rules easy!
 #
-# Copyright (C) 2001-2009 Max Kellermann, Auke Kok
+# Copyright (C) 2001-2010 Max Kellermann, Auke Kok
 #
 # Comments, questions, greetings and additions to this program
 # may be sent to <ferm@foo-projects.org>
@@ -1614,7 +1614,7 @@ the command afterwards.  "flush" hooks are run after ferm has flushed
 the firewall rules (option --flush).  You may install any number of
 hooks.
 
-=head1 FUNCTIONS
+=head1 BUILT-IN FUNCTIONS
 
 There are several built-in functions which you might find useful.
 
