--- a/doc/import-ferm.1
+++ b/doc/import-ferm.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "IMPORT-FERM 1"
-.TH IMPORT-FERM 1 "2010-01-02" "ferm 2.0.8~git" "FIREWALL RULES MADE EASY"
+.TH IMPORT-FERM 1 "2011-02-14" "ferm 2.0.9" "FIREWALL RULES MADE EASY"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
