--- a/doc/ferm.pod
+++ b/doc/ferm.pod
@@ -442,6 +442,9 @@ Optionally, you may define the name of the sub chain:
      proto udp dport domain ACCEPT;
  }
 
+The name can either be a quoted string literal, or an expanded ferm
+expression such as @substr($var,0,20).
+
 You can achieve the same by explicitly declaring a custom chain, but
 you may feel that using B<@subchain> requires less typing.
 
@@ -1636,6 +1639,20 @@ The default is "A".
 Be careful with resolved host names in firewall configuration.  DNS
 requests may block the firewall configuration for a long time, leaving
 the machine vulnerable, or they may fail.
+
+=head2 @cat(a, b, ...)
+
+Concatenate all parameters into one string.
+
+=head2 @substr(expression, offset, length)
+
+Extracts a substring out of expression and returns it.  First
+character is at offset 0. If OFFSET is negative, starts that far from
+the end of the string.  
+
+=head2 @length(expression)
+
+Returns the length in characters of the value of EXPR.
 
 =head1 RECIPES
 
