--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,16 @@
     Auke Kok <sofar@foo-projects.org>
 
 
+v2.0.8 - 4 Nov 2010
+  - added automatic variable $DIRNAME
+  - implement confirmation/rollback for --shell --interactive
+  - added the "type" parameter to @resolve()
+  - new functions @eq, @ne, @not
+  - updated netfilter modules:
+    * ebtables/snat: support --snat-arp
+  - add parameter --timeout for rollback
+
+
 v2.0.7 - 2 Jan 2010
   - fix post and flush hooks with --lines
   - always prefix the negation operator
