--- a/doc/ferm.pod
+++ b/doc/ferm.pod
@@ -695,14 +695,6 @@ Match the 6 bit DSCP field within the TOS field.
     mod dscp dscp 11;
     mod dscp dscp-class AF41;
 
-=item B<dst>
-
-Matches the Destination Options header (ip6).
-
-    mod dst dst-len 8 ACCEPT;
-    mod dst dst-len !8 ACCEPT;
-    mod dst dst-opts (1:4 2:8) ACCEPT;
-
 =item B<ecn>
 
 Match the ECN bits of an IPv4 TCP header.
@@ -730,17 +722,6 @@ doesn't match other link layer frame, and is only valid in the
 PREROUTING, INPUT and FORWARD chains."
 
     mod eui64 ACCEPT;
-
-=item B<frag>
-
-Matches the Fragment header (ip6).
-
-    mod frag fragid 123:456 ACCEPT;
-    mod frag fragid !123:456 ACCEPT;
-    mod frag fragres ACCEPT;
-    mod frag fragfirst ACCEPT;
-    mod frag fragmore ACCEPT;
-    mod frag fraglast ACCEPT;
 
 =item B<fuzzy>
 
@@ -1476,6 +1457,10 @@ just like any other variable.
 
 The name of the configuration file.
 
+=item B<$DIRNAME>
+
+The directory of the configuration file.
+
 =item B<$DOMAIN>
 
 The current domain.  One of I<ip>, I<ip6>, I<arp>, I<eb>.
@@ -1618,20 +1603,35 @@ hooks.
 
 There are several built-in functions which you might find useful.
 
-=head2 @resolve((hostname1 hostname2 ...))
+=head2 @eq(a,b)
+
+Tests two values for equality.  Example:
+
+    @if @eq($DOMAIN, ip6) DROP;
+
+=head2 @ne(a,b)
+
+Similar to @eq, this tests for non-equality.
+
+=head2 @not(x)
+
+Negates a boolean value.
+
+=head2 @resolve((hostname1 hostname2 ...), [type])
 
 Usually, host names are resolved by iptables.  To let ferm resolve
 host names, use the function @resolve:
 
     saddr @resolve(my.host.foo) proto tcp dport ssh ACCEPT;
     saddr @resolve((another.host.foo third.host.foo)) proto tcp dport openvpn ACCEPT;
+    daddr @resolve(ipv6.google.com, AAAA) proto tcp dport http ACCEPT;
 
 Note the double parentheses in the second line: the inner pair for
 creating a ferm list, and the outer pair as function parameter
 delimiters.
 
-This function currently only resolves B<A> records (i.e. IPv4
-addresses), rendering it useless for the I<ip6> domain.
+The second parameter is optional, and specifies the DNS record type.
+The default is "A".
 
 Be careful with resolved host names in firewall configuration.  DNS
 requests may block the firewall configuration for a long time, leaving
@@ -1767,7 +1767,7 @@ If you find a bug, please tell us: ferm@foo-projects.org
 
 =head1 COPYRIGHT
 
-Copyright (C) 2001-2009 Max Kellermann <max@foo-projects.org>, Auke
+Copyright (C) 2001-2010 Max Kellermann <max@foo-projects.org>, Auke
 Kok <sofar@foo-projects.org>
 
 This program is free software; you can redistribute it and/or modify
