Imported Upstream version 2.1

--- a/AUTHORS
+++ b/AUTHORS
@@ -30,6 +30,9 @@ People who contributed to this package
  * Boris Zentner <boris@m2b.de>
  * Florian Friesdorf <42ff@gmx.net>
  * Julien Soula <Julien.Soula@lifl.fr>
+ * Maximilian Gass <mxey@ghosthacking.net>
+ * Marc Haber
+ * Faidon Liambotis <paravoid@debian.org>
 
 
 And many, many more...
