--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,25 @@
     Auke Kok <sofar@foo-projects.org>
 
 
+v2.1 - 17 Jul 2011
+  - new functions @basename, @dirname, @ipfilter
+  - add automatic variables $FILENAME, $LINE
+  - updated netfilter modules:
+    * pkg-type: support negation
+    * set: "--match set" support for newer iptables
+  - updated ebtables support:
+    * use per-protocol options
+    * add support for -p ARP --arp-gratuitous
+    * support abbreviations in arguments
+    * add support for matching IPv6
+    * add support for "among" match
+    * add support for the "limit" match
+  - honor --noflush in fast mode
+  - discard previous specifications when @if fails
+  - use the --domain argument as the default domain
+  - keep track of line numbers within custom function calls
+
+
 v2.0.9 - 26 Feb 2011
   - updated netfilter modules:
     * state: support negation
