--- a/doc/ferm.pod
+++ b/doc/ferm.pod
@@ -5,7 +5,7 @@
 #
 # ferm, a firewall setup program that makes firewall rules easy!
 #
-# Copyright (C) 2001-2011 Max Kellermann, Auke Kok
+# Copyright (C) 2001-2012 Max Kellermann, Auke Kok
 #
 # Comments, questions, greetings and additions to this program
 # may be sent to <ferm@foo-projects.org>
@@ -673,6 +673,8 @@ Check connection tracking information.
     mod conntrack ctproto tcp;
     mod conntrack ctorigsrc 192.168.0.2;
     mod conntrack ctorigdst 1.2.3.0/24;
+    mod conntrack ctorigsrcport 67;
+    mod conntrack ctorigdstport 22;
     mod conntrack ctreplsrc 2.3.4.5;
     mod conntrack ctrepldst ! 3.4.5.6;
     mod conntrack ctstatus ASSURED;
@@ -1823,7 +1825,7 @@ If you find a bug, please tell us: ferm@foo-projects.org
 
 =head1 COPYRIGHT
 
-Copyright (C) 2001-2011 Max Kellermann <max@foo-projects.org>, Auke
+Copyright (C) 2001-2012 Max Kellermann <max@foo-projects.org>, Auke
 Kok <sofar@foo-projects.org>
 
 This program is free software; you can redistribute it and/or modify
