--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ferm (2.1-3) experimental; urgency=low
+ferm (2.1-3) unstable; urgency=low
 
   [ Salvatore Bonaccorso ]
   * Fix "ferm: modifies conffiles (policy 10.7.3): /etc/default/ferm"
@@ -13,7 +13,7 @@ ferm (2.1-3) experimental; urgency=low
       it to the configuration file in postinst.
     - Remove configuration file on purge in postrm script
 
- -- Alexander Wirt <formorer@debian.org>  Thu, 01 Nov 2012 19:28:58 +0100
+ -- Alexander Wirt <formorer@debian.org>  Wed, 14 Nov 2012 22:23:42 +0100
 
 ferm (2.1-2) unstable; urgency=low
 
