--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+ferm (2.1-4) unstable; urgency=low
+
+  * [4ede608] Backport a patch that fixes a regression in functions containing
+    ip and ip6 domains
+    (Closes: #695677)
+  * [22d4a48] don't modify permissions on /etc/ferm during upgrade
+    (Closes: #694334)
+
+ -- Alexander Wirt <formorer@debian.org>  Tue, 11 Dec 2012 22:59:18 +0100
+
 ferm (2.1-3) unstable; urgency=low
 
   [ Salvatore Bonaccorso ]
