--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ferm (2.1-5) unstable; urgency=low
+
+  * [f4e216a] Backport a fix from 2.1.2 which fixes a regression from the
+              domain (ip ip6) fix introduced in 2.1.1 (backported to 2.1-4)
+
+ -- Alexander Wirt <formorer@debian.org>  Sat, 29 Dec 2012 11:30:56 +0100
+
 ferm (2.1-4) unstable; urgency=low
 
   * [4ede608] Backport a patch that fixes a regression in functions containing
