--- a/doc/ferm.pod
+++ b/doc/ferm.pod
@@ -806,7 +806,8 @@ per-port limits managed in a hash table.
     mod hashlimit  hashlimit 10/minute  hashlimit-burst 30/minute
       hashlimit-mode dstip  hashlimit-name foobar  ACCEPT;
 
-Possible values for hashlimit-mode: dstip dstport srcip srcport.
+Possible values for hashlimit-mode: dstip dstport srcip srcport (or a
+list with more than one of these).
 
 There are more possible settings, type "iptables -m hashlimit -h" for
 documentation.
@@ -867,6 +868,15 @@ Match every 'n'th packet.
     mod nth start 5 packet 2 every 6;
 
 Type "iptables -m nth -h" for details.
+
+=item B<osf>
+
+Match packets depending on the operating system of the sender.
+
+    mod osf genre Linux;
+    mod osf ! genre FreeBSD ttl 1 log 1;
+
+Type "iptables -m osf -h" for details.
 
 =item B<owner>
 
@@ -1558,8 +1568,8 @@ directory are included, sorted alphabetically:
 
     @include 'ferm.d/';
 
-With a trailing pipe symbol, B<ferm> executes a program and parses its
-output:
+With a trailing pipe symbol, B<ferm> executes a shell command and
+parses its output:
 
     @include '/root/generate_ferm_rules.sh $HOSTNAME|'
 
@@ -1754,8 +1764,14 @@ the error.
 
 Apply the firewall rules and ask the user for confirmation.  Reverts
 to the previous ruleset if there is no valid user response within 30
-seconds.  This is useful for remote firewall administration: you can
-test the rules without fearing to lock yourself out.
+seconds (see B<--timeout>).  This is useful for remote firewall
+administration: you can test the rules without fearing to lock
+yourself out.
+
+=item B<--timeout S>
+
+If B<--interactive> is used, then roll back if there is no valid user
+response after this number of seconds.  The default is 30.
 
 =item B<--help>
 
