--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ferm (2.2-4) unstable; urgency=medium
+
+  * [ec12e74] Don't fail if /var/cache/ferm isn't writable (Closes: #821895)
+
+ -- Alexander Wirt <formorer@debian.org>  Wed, 20 Apr 2016 11:31:54 +0200
+
 ferm (2.2-3.1) unstable; urgency=medium
 
   * Non-maintainer upload.
