--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ferm (2.3-2) UNRELEASED; urgency=medium
+ferm (2.3-2) unstable; urgency=medium
 
   * [3e49919] Start ferm as before network and stop as late as possible
     (Closes: #824188)
 
- -- Alexander Wirt <formorer@debian.org>  Sat, 21 May 2016 10:32:10 +0200
+ -- Alexander Wirt <formorer@debian.org>  Sun, 12 Jun 2016 19:48:04 +0200
 
 ferm (2.3-1) unstable; urgency=medium
 
