New upstream version 2.4

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Authors of this package
- * Max Kellermann <max@foo-projects.org>
+ * Max Kellermann <max.kellermann@gmail.com>
  * Auke Kok <sofar@foo-projects.org>
 
 People who contributed to this package
