--- a/doc/ferm.pod
+++ b/doc/ferm.pod
@@ -5,10 +5,10 @@
 #
 # ferm, a firewall setup program that makes firewall rules easy!
 #
-# Copyright (C) 2001-2012 Max Kellermann, Auke Kok
+# Copyright 2001-2017 Max Kellermann, Auke Kok
 #
-# Comments, questions, greetings and additions to this program
-# may be sent to <ferm@foo-projects.org>
+# Bug reports and patches for this program may be sent to the GitHub
+# repository: L<https://github.com/MaxKellermann/ferm>
 #
 
 #
@@ -24,7 +24,8 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+# MA 02110-1301 USA.
 #
 
 =head1 NAME
@@ -454,6 +455,19 @@ Works like B<@subchain> except that instead of using B<jump> target it
 uses B<goto> target. See discussion below for the difference between
 these two targets.
 
+=item B<@preserve>
+
+Preserve existing rules of the current chain:
+
+ chain (foo bar) @preserve;
+
+With this option, B<ferm> loads the previous rule set using
+B<iptables-save>, extracts all "preserved" chains and inserts their
+data into the output.
+
+"Preserved" chains must not be modified with B<ferm>: no rules and no
+policies.
+
 =back
 
 
@@ -485,7 +499,7 @@ targeted at the address (daddr).
 
 Examples:
 
-    saddr 192.168/8 ACCEPT; # (identical to the next one:)
+    saddr 192.168.0.0/24 ACCEPT; # (identical to the next one:)
     saddr 192.168.0.0/255.255.255.0 ACCEPT;
     daddr my.domain.com ACCEPT;
 
@@ -521,7 +535,7 @@ And some examples of valid ports/ranges:
 
 Specify that the SYN flag in a tcp package should be matched,
 which are used to build new tcp connections. You can identify
-incoming connections with this, and decide wether you want
+incoming connections with this, and decide whether you want
 to allow it or not. Packets that do not have this flag are
 probably from an already established connection, so it's
 considered reasonably safe to let these through.
@@ -628,6 +642,22 @@ Match using Linux Socket Filter.
 
     mod bpf bytecode "4,48 0 0 9,21 0 1 6,6 0 0 1,6 0 0 0";
 
+=item B<cgroup>
+
+Match using cgroupsv2 hierarchy or legacy net_cls cgroup.
+
+    mod cgroup path ! example/path ACCEPT;
+
+The path is relative to the root of the cgroupsv2 hiearchy, and is compared
+against the initial portion of a process' path in the hierarchy.
+
+    mod cgroup cgroup 10:10 DROP;
+    mod cgroup cgroup 1048592 DROP;
+
+Matches against the value of C<net_cls.classid> set on the process' legacy
+net_cls cgroup. The class may be specified as a hexadecimal major:minor pair
+(see L<tc(8)>), or as a decimal, so those two rules are equivalent.
+
 =item B<comment>
 
 Adds a comment of up to 256 characters to a rule, without an effect.
@@ -671,6 +701,8 @@ server per client IP address (or address block).
     mod connlimit connlimit-above 4 REJECT;
     mod connlimit connlimit-above !4 ACCEPT;
     mod connlimit connlimit-above 4 connlimit-mask 24 REJECT;
+    mod connlimit connlimit-upto 4 connlimit-saddr REJECT;
+    mod connlimit connlimit-above 4 connlimit-daddr REJECT;
 
 =item B<connmark>
 
@@ -761,6 +793,14 @@ PREROUTING, INPUT and FORWARD chains."
 "This module matches a rate limit based on a fuzzy logic controller [FLC]."
 
     mod fuzzy lower-limit 10 upper-limit 20 ACCEPT;
+
+=item B<geoip>
+
+Matches packets based on their geological location. (Needs an installed
+GeoDB.)
+
+    mod geoip src-cc "CN,VN,KR,BH,BR,AR,TR,IN,HK" REJECT;
+    mod geoip dst-cc "DE,FR,CH,AT" ACCEPT;
 
 =item B<hbh>
 
@@ -1000,6 +1040,7 @@ Temporarily mark source IP addresses.
     mod recent set rdest;
     mod recent rcheck rsource name "badguy" seconds 60;
     mod recent update seconds 120 hitcount 3 rttl;
+    mod recent mask 255.255.255.0 reap;
 
 This netfilter module has a design flaw: although it is implemented as
 a match module, it has target-like behaviour when using the "set"
@@ -1981,12 +2022,13 @@ iptables and perl 5.6
 
 Bugs? What bugs?
 
-If you find a bug, please tell us: ferm@foo-projects.org
+If you find a bug, please report it on GitHub:
+L<https://github.com/MaxKellermann/ferm/issues>
 
 =head1 COPYRIGHT
 
-Copyright (C) 2001-2012 Max Kellermann <max@foo-projects.org>, Auke
-Kok <sofar@foo-projects.org>
+Copyright 2001-2017 Max Kellermann <max.kellermann@gmail.com>,
+Auke Kok <sofar@foo-projects.org> and various other contributors.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -2000,12 +2042,12 @@ General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
-Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
-USA
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+MA 02110-1301 USA.
 
 =head1 AUTHOR
 
-Max Kellermann <max@foo-projects.org>, Auke Kok
+Max Kellermann <max.kellermann@gmail.com>, Auke Kok
 <sofar@foo-projects.org>
 
 =cut
